added notes for diff datatypes

--- a/basics/index.html
+++ b/basics/index.html
@@ -6,9 +6,9 @@
 <body>
 
 <!-- Inline Javascript -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	console.log("Hello World");
-</script>
+</script> -->
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
