--- a/basics/index.html
+++ b/basics/index.html
@@ -9,6 +9,7 @@
 <!-- <script type="text/javascript">
 	console.log("Hello World");
 </script> -->
+<script type="text/javascript" src="challenges.js"></script>
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
