--- a/advanObjFunc/index.html
+++ b/advanObjFunc/index.html
@@ -4,7 +4,7 @@
 	<title>Advanced JS Objects & Functions</title>
 </head>
 <body>
-
+<h1>Objects & Functions</h1>
 </body>
 <script type="text/javascript" src="index.js"></script>
 </html>
