--- a/asynch/index.html
+++ b/asynch/index.html
@@ -26,10 +26,15 @@
 			const recipeID = [523, 883, 432, 974];
 			console.log(recipeID);
 
-			setTimeout((id) => {
+			setTimeout(id => {
 				const recipe = {title: 'Fresh tomato pasta', publisher: 'Johnny'};
 				console.log(`${id}: ${recipe.title}`);
-			}, 1000, recipeID[2]);
+
+				setTimeout(publisher => {
+					const recipe = {title: 'Italian pizza', publisher: 'Johnny'};
+					console.log(recipe);
+				},1500, recipe.publisher);
+			}, 1500, recipeID[2]);
 		}, 1500);
 	}
 	getRecipe();
