--- a/asynch/index.html
+++ b/asynch/index.html
@@ -20,24 +20,25 @@
 	// }
 	// first();
 
-	function getRecipe() {
-		setTimeout(() => {
-			//Array of recipe id's
-			const recipeID = [523, 883, 432, 974];
-			console.log(recipeID);
+	// function getRecipe() {
+	// 	setTimeout(() => {
+	// 		//Array of recipe id's
+	// 		const recipeID = [523, 883, 432, 974];
+	// 		console.log(recipeID);
 
-			setTimeout(id => {
-				const recipe = {title: 'Fresh tomato pasta', publisher: 'Johnny'};
-				console.log(`${id}: ${recipe.title}`);
+	// 		setTimeout(id => {
+	// 			const recipe = {title: 'Fresh tomato pasta', publisher: 'Johnny'};
+	// 			console.log(`${id}: ${recipe.title}`);
 
-				setTimeout(publisher => {
-					const recipe = {title: 'Italian pizza', publisher: 'Johnny'};
-					console.log(recipe);
-				},1500, recipe.publisher);
-			}, 1500, recipeID[2]);
-		}, 1500);
-	}
-	getRecipe();
+	// 			setTimeout(publisher => {
+	// 				const recipe = {title: 'Italian pizza', publisher: 'Johnny'};
+	// 				console.log(recipe);
+	// 			},1500, recipe.publisher);
+	// 		}, 1500, recipeID[2]);
+	// 	}, 1500);
+	// }
+	// getRecipe();
+	//Promises
 </script>
 </body>
 </html>
