added catch to promise

--- a/asynch/index.html
+++ b/asynch/index.html
@@ -39,6 +39,19 @@
 	// }
 	// getRecipe();
 	//Promises
+	const getIDs = new Promise((resolve, reject) => {
+		setTimeout(() => {
+			resolve([523, 883, 432, 974]);
+		}, 1500);
+	});
+
+	getIDs
+	.then(IDs => {
+		console.log(IDs);
+	});
+	.catch(error => {
+		console.log(error);
+	});
 </script>
 </body>
 </html>
