no more callback hell

--- a/asynch/index.html
+++ b/asynch/index.html
@@ -59,6 +59,10 @@
 	getIDs
 	.then(IDs => {
 		console.log(IDs);
+		return getRecipe(IDs[2])
+	})
+	.then(recipe => {
+		console.log(recipe);
 	})
 	.catch(error => {
 		console.log(error);
