used await function to call promise functions

--- a/asynch/index.html
+++ b/asynch/index.html
@@ -65,23 +65,32 @@
 		});
 	};
 
-	getIDs
-	.then(IDs => {
-		console.log(IDs);
-		return getRecipe(IDs[2])
-	})
-	.then(recipe => {
-		console.log(recipe);
-		return getRelated(`Johnny`);
-	})
-	.then(recipe => {
-		console.log(recipe);
-	})
-	.catch(error => {
-		console.log(error);
-	});
+	// getIDs
+	// .then(IDs => {
+	// 	console.log(IDs);
+	// 	return getRecipe(IDs[2])
+	// })
+	// .then(recipe => {
+	// 	console.log(recipe);
+	// 	return getRelated(`Johnny`);
+	// })
+	// .then(recipe => {
+	// 	console.log(recipe);
+	// })
+	// .catch(error => {
+	// 	console.log(error);
+	// });
 
 	//Asycn Await
+	async function getRecipesAW(){
+		const IDs = await getIDs;
+		console.log(IDs);
+		const recipe = await getRecipe(IDs[2]);
+		console.log(recipe);
+		const related = await getRelated(`Johnny`);
+		console.log(related);
+	}
+	getRecipesAW();
 </script>
 </body>
 </html>
