fixed cors issue

--- a/asynch/index.html
+++ b/asynch/index.html
@@ -93,6 +93,7 @@
 	// getRecipesAW();
 
 	// Ajax call
+	fetch('https://crossorigin.me/https://www.metaweather.com/api/location/2487956/');
 
 </script>
 </body>
