--- a/asynch/index.html
+++ b/asynch/index.html
@@ -93,10 +93,17 @@
 	// getRecipesAW();
 
 	// Ajax call
-	fetch('https://crossorigin.me/https://www.metaweather.com/api/location/2487956/');
+	fetch('http://cors-anywhere.herokuapp.com/https://www.metaweather.com/api/location/2487956/')
+	// get data and return promise/error
+	.then(result => {
+		console.log(result);
+	})
+	.catch(error => console.log(error));
+
 
 </script>
 </body>
 </html>
 
 <!-- Sychronous js is executed line by line -->
+<!-- http://cors-anywhere.herokuapp.com -->
