ajax call using fetch and promises

--- a/asynch/index.html
+++ b/asynch/index.html
@@ -97,6 +97,10 @@
 	// get data and return promise/error
 	.then(result => {
 		console.log(result);
+		return result.json();
+	})
+	.then(data => {
+		console.log(data);
 	})
 	.catch(error => console.log(error));
 
