--- a/asynch/index.html
+++ b/asynch/index.html
@@ -100,7 +100,9 @@
 		return result.json();
 	})
 	.then(data => {
-		console.log(data);
+		//console.log(data);
+		const today = data.consolidated_weather[0];
+		console.log(`temp in ${data.title} stay between ${today.min_temp} and ${today.max_temp}.`)
 	})
 	.catch(error => console.log(error));
 
