using ajax with async/await

--- a/asynch/index.html
+++ b/asynch/index.html
@@ -93,18 +93,23 @@
 	// getRecipesAW();
 
 	// Ajax call
-	fetch('http://cors-anywhere.herokuapp.com/https://www.metaweather.com/api/location/2487956/')
-	// get data and return promise/error
-	.then(result => {
-		console.log(result);
-		return result.json();
-	})
-	.then(data => {
-		//console.log(data);
-		const today = data.consolidated_weather[0];
-		console.log(`temp in ${data.title} stay between ${today.min_temp} and ${today.max_temp}.`)
-	})
-	.catch(error => console.log(error));
+	function getWeather(woeid){
+
+		fetch(`http://cors-anywhere.herokuapp.com/https://www.metaweather.com/api/location/${woeid}/`)
+		// get data and return promise/error
+		.then(result => {
+			console.log(result);
+			return result.json();
+		})
+		.then(data => {
+			//console.log(data);
+			const today = data.consolidated_weather[0];
+			console.log(`temp in ${data.title} stays between ${today.min_temp} and ${today.max_temp}.`)
+		})
+		.catch(error => console.log(error));
+	}
+	getWeather(2487956);
+	getWeather(44418);
 
 
 </script>
