--- a/asynch/index.html
+++ b/asynch/index.html
@@ -92,13 +92,13 @@
 	// }
 	// getRecipesAW();
 
-	// Ajax call
+	// Ajax call with promises
 	function getWeather(woeid){
 
 		fetch(`http://cors-anywhere.herokuapp.com/https://www.metaweather.com/api/location/${woeid}/`)
 		// get data and return promise/error
 		.then(result => {
-			console.log(result);
+			// console.log(result);
 			return result.json();
 		})
 		.then(data => {
@@ -111,6 +111,14 @@
 	getWeather(2487956);
 	getWeather(44418);
 
+	// Ajax with Async/Await
+	async function getWeatherAW(woeid) {
+		const result = await fetch(`http://cors-anywhere.herokuapp.com/https://www.metaweather.com/api/location/${woeid}/`);
+		const data = await result.json();
+		console.log(data);
+	}
+	getWeatherAW(2487956);
+	getWeatherAW(44418);
 
 </script>
 </body>
