--- a/asynch/index.html
+++ b/asynch/index.html
@@ -113,9 +113,15 @@
 
 	// Ajax with Async/Await
 	async function getWeatherAW(woeid) {
-		const result = await fetch(`http://cors-anywhere.herokuapp.com/https://www.metaweather.com/api/location/${woeid}/`);
-		const data = await result.json();
-		console.log(data);
+		// Try catch statement
+		try {
+			const result = await fetch(`http://cors-anywhere.herokuapp.com/https://www.metaweather.com/api/location/${woeid}/`);
+			const data = await result.json();
+			const tomorrow = data.consolidated_weather[1];
+			console.log(`temp tomorrow in ${data.title} stays between ${today.min_temp} and ${today.max_temp}.`);
+		}catch(error){
+			console.log(error);
+		}
 	}
 	getWeatherAW(2487956);
 	getWeatherAW(44418);
