logged data for temp in london

--- a/asynch/index.html
+++ b/asynch/index.html
@@ -119,12 +119,17 @@
 			const data = await result.json();
 			const tomorrow = data.consolidated_weather[1];
 			console.log(`temp tomorrow in ${data.title} stays between ${tomorrow.min_temp} and ${tomorrow.max_temp}.`);
+			return data;
 		}catch(error){
 			alert(error);
 		}
 	}
 	getWeatherAW(2487956);
-	getWeatherAW(44418);
+	let dataLondon;
+	getWeatherAW(44418).then(data => {
+		dataLondon = data
+		console.log(dataLondon);
+	});
 
 </script>
 </body>
