added new input for todo

--- a/todo/index.html
+++ b/todo/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 	<h1>Todos</h1>
+	<input type="text" id="new-todo" placeholder="New Todo">
+	<button id="add-todo">Add todo</button>
 	<script src="script.js"></script>
 </body>
 </html>
