--- a/todo/index.html
+++ b/todo/index.html
@@ -8,6 +8,8 @@
 	<h1>Todos</h1>
 	<input type="text" id="new-todo" placeholder="New Todo">
 	<button id="add-todo">Add todo</button>
+	<input type="text" id="search-text" placeholder="Filter todos">
+	<div id="todos"></div>
 	<script src="script.js"></script>
 </body>
 </html>
