--- a/dom/index.html
+++ b/dom/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Notes</title>
 </head>
 <body>
-	
+	<h1>Notes App</h1>
+	<h2>Take notes and never forget</h2>
+	<input type="text" id="search-text" placeholder="Filter notes">
+	<div id="notes">
+	</div>
+	<button id="create-note">Create Note</button>
+	<label for="">
+		<input id="for-fun" type="checkbox"> Check me for fun
+	</label>
+	<script src="script.js"></script>
 </body>
 </html>
