new section on local storage

--- a/todo/index.html
+++ b/todo/index.html
@@ -6,10 +6,12 @@
 </head>
 <body>
 	<h1>Todos</h1>
-	<input type="text" id="new-todo" placeholder="New Todo">
-	<button id="add-todo">Add todo</button>
 	<input type="text" id="search-text" placeholder="Filter todos">
 	<div id="todos"></div>
+	<form id="todo-form" action="">
+		<input type="text" placeholder="Add Todo" name="addTodo">
+		<button>Submit</button>
+	</form>
 	<script src="script.js"></script>
 </body>
 </html>
