--- a/todo/index.html
+++ b/todo/index.html
@@ -7,10 +7,14 @@
 <body>
 	<h1>Todos</h1>
 	<input type="text" id="search-text" placeholder="Filter todos">
+	<label for="">
+		Hide Completed
+		<input type="checkbox" id="hide-completed">
+	</label>
 	<div id="todos"></div>
 	<form id="todo-form" action="">
 		<input type="text" placeholder="Add Todo" name="addTodo">
-		<button>Submit</button>
+		<button>Add Todo</button>
 	</form>
 	<script src="script.js"></script>
 </body>
