refactoring todo app

--- a/todo/index.html
+++ b/todo/index.html
@@ -16,6 +16,7 @@
 		<input type="text" placeholder="Add Todo" name="addTodo">
 		<button>Add Todo</button>
 	</form>
+	<script src="todos-functions.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
