--- a/dom/index.html
+++ b/dom/index.html
@@ -14,6 +14,7 @@
 	<label for="">
 		<input id="for-fun" type="checkbox"> Check me for fun
 	</label>
+	<script src="./uuid.js"></script>
 	<script src="notes-function.js"></script>
 	<script src="script.js"></script>
 </body>
